# swagger_server/controllers/default_controller.py
@@ -5,6 +5,7 @@ from swagger_server.models.student import Student  # noqa: E501
 from swagger_server import util
 from swagger_server.service import student_service
 
+import sys
 
 def add_student(body):  # noqa: E501
     """Add a new student
@@ -50,16 +51,22 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     :rtype: Student
     """
     res = student_service.get_student_by_id(student_id, subject=subject)
-
     if res:
         return res
     return 'Not Found', 404
+    
+def get_student(last_name):
+    """Find student by last name
 
-def get_student_by_last_name(last_name):
+    Returns a single student # noqa: E501
 
-    res = student_service.get_student_by_last_name(last_name)
+    :param last_name: last name of student to return
+    :type last_name: str
 
+    :rtype: Student
+    """
+    print(last_name, file=sys.stderr)
+    res = student_service.get_student(last_name)
     if res:
-        return res[0], 200
-    else:
-        return 'Not Found', 404
+        return res
+    return 'Not Found', 404
